--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,9 +108,6 @@ img {
   margin: 0.2em 0;
 }
 
-.featured-course p {
-  width: 200px;
-}
 .featured-course .cols:hover {
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0);
   border: 1px solid red;
@@ -136,11 +133,6 @@ img {
   -webkit-box-flex: 1;
   flex: 2;
 }
-
-/* .course-info {
-  -webkit-box-flex: 1;
-  flex: 4;
-} */
 
 .view-all-course {
   border-bottom: 1px solid #ccc;
@@ -204,7 +196,7 @@ img::after {
   background-color: #f1f1f1;
 }
 
-@media only screnn and (min-width: 768px) {
+@media (min-width: 769px) {
   .wrapper {
     margin: 0;
   }
@@ -220,16 +212,20 @@ img::after {
 
   .hero {
     padding: 8em 1% 0 1%;
-    height: 90vh;
+    height: 50vh;
     font-weight: 900;
   }
 
   .cols {
-    width: 50%;
+    width: 100%;
+  }
+
+  .featured-course .w {
+    width: 100%;
   }
 
   .description {
-    width: 100%;
+    width: 70%;
     border: 4px solid #ccc;
     opacity: 0.6;
     font-weight: 400;
@@ -250,6 +246,10 @@ img::after {
 
   .featured-course .w {
     width: 100px;
+  }
+
+  .featured-course p {
+    width: 200px;
   }
 
   .hero {
