--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,11 +41,6 @@ a:hover {
   width: 100%;
 }
 
-.nav a {
-  padding: 0 0 0 0.3em;
-  color: dimgray;
-}
-
 .description {
   width: 50%;
   border: 4px solid #ccc;
@@ -71,12 +66,6 @@ a:hover {
 img {
   width: 100%;
   height: auto;
-}
-
-/* Main section */
-
-.main {
-  padding: 0 10em;
 }
 
 .hero {
@@ -109,29 +98,14 @@ img {
 }
 
 .featured-course .cols:hover {
-  box-shadow: 0 4px 5px rgba(0, 0, 0, 0);
-  border: 1px solid red;
+  box-shadow: 9px 4px 5px rgba(163, 14, 14, 0.9);
   opacity: 0.6;
   cursor: pointer;
 }
 
 .featured-course .w {
   width: 100%;
-}
-
-img {
-  width: 100%;
-  height: auto;
-}
-
-.course-title {
-  -webkit-box-flex: 1;
-  flex: 1;
-}
-
-.space {
-  -webkit-box-flex: 1;
-  flex: 2;
+  margin: 0 auto;
 }
 
 .view-all-course {
@@ -196,9 +170,14 @@ img::after {
   background-color: #f1f1f1;
 }
 
-@media (min-width: 769px) {
+@media (min-width: 768px) {
+  .nav a {
+    padding: 0 0 0 0.1em;
+    color: dimgray;
+  }
+
   .wrapper {
-    margin: 0;
+    margin: 5%;
   }
 
   .featured-course {
@@ -206,26 +185,8 @@ img::after {
     height: auto;
   }
 
-  .featured-course .w {
-    width: 100px;
-  }
-
-  .hero {
-    padding: 8em 1% 0 1%;
-    height: 50vh;
-    font-weight: 900;
-  }
-
-  .cols {
-    width: 100%;
-  }
-
-  .featured-course .w {
-    width: 100%;
-  }
-
   .description {
-    width: 70%;
+    width: 50%;
     border: 4px solid #ccc;
     opacity: 0.6;
     font-weight: 400;
