--- a/assets/css/uuu.css
+++ b/assets/css/uuu.css
@@ -1,28 +1,320 @@
-
-
-/* stick to top on scroll */
-
-.tutors-img::before,
-.artist-img::after {
-  content: "";
-  position: absolute;
-  height: 20px;
-  width: 20px;
-}
-
-.tutors-img::after {
-  right: 0;
-  bottom: 0;
-  border-right: 3px double #ec5242;
-  border-bottom: 3px double #ec5242;
-}
-
-
-.client-item .client-logo {
-  -webkit-filter: grayscale(1);
-  filter: grayscale(1);
-  -webkit-transition: -webkit-filter 0.2s linear;
-  transition: -webkit-filter 0.2s linear;
-  transition: filter 0.2s linear;
-  transition: filter 0.2s linear, -webkit-filter 0.2s linear;
-}
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: "Lato", sans-serif;
+  }
+  
+  a:hover {
+    text-decoration: none;
+  }
+  
+  .logo {
+    width: 100%;
+    height: auto;
+  }
+  
+  .top-nav {
+    padding: 0 5%;
+  }
+  
+  .top-nav a {
+    color: #fff;
+    padding: 1em 0 1em 0.9em;
+  }
+  
+  .top-nav i {
+    padding: 1em 0 1em 0.9em;
+  }
+  
+  .fixed-top {
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
+  
+  #myHeader {
+    z-index: 999;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
+  }
+  
+  .nav-wrapper {
+    padding: 0.5em 5%;
+  }
+  
+  .nav a {
+    padding: 0 0 0 0.3em;
+    color: dimgray;
+  }
+  
+  .font-2x {
+    font-size: 2rem;
+  }
+  
+  /* stick to top on scroll */
+  
+  .stickTop {
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
+  
+  .description {
+    width: 50%;
+    border: 4px solid #ccc;
+    opacity: 0.6;
+    font-weight: 400;
+    font-size: 0.8em;
+    z-index: 0;
+  }
+  /* ----------------------- */
+  
+  /* Main section */
+  
+  .main {
+    padding: 0 10em;
+  }
+  
+  .hero {
+    background-image: url(/assets/images/hero-img.jpg),
+      -webkit-gradient(linear, left top, left bottom, color-stop(12%, transparent), color-stop(12%, rgba(39, 42, 49, 0.2)));
+    background-image: url(/assets/images/hero-img.jpg),
+      linear-gradient(transparent 12%, rgba(39, 42, 49, 0.2) 12%);
+    background-size: cover;
+    background-attachment: fixed !important;
+    background-position: center;
+    padding: 8em 0 0 5%;
+    height: 90vh;
+    font-weight: 900;
+  }
+  
+  .featured-course {
+    background: url(/assets/images/bg.jpg) 0 0 no-repeat;
+    background-size: cover;
+    color: #ccc;
+    padding: 5em;
+    height: auto;
+  }
+  
+  .featured-course img {
+    width: 50px;
+    margin: 0 auto;
+    height: auto;
+  }
+  img {
+    width: 100%;
+    height: auto;
+  }
+  .featured-course h5 {
+    font-weight: bold;
+    color: #fd5534;
+    font-size: 1.5rem;
+  }
+  
+  .featured-course hr {
+    background-color: red;
+    width: 5%;
+    margin: 0 auto;
+    padding: 0.123em;
+  }
+  
+  .cols .img {
+    width: auto;
+    border: 3px solid;
+    text-align: center;
+    margin: 0 auto !important;
+  }
+  
+  .featured-course .cols {
+    background-color: #fff;
+    color: #000;
+    width: 100%;
+    border: px solid #ccc;
+    opacity: 0.9;
+    border: 1px solid;
+  }
+  
+  .featured-course .cols:hover {
+    box-shadow: 0 4px 5px rgba(0, 0, 0, 0);
+    border: 1px solid red;
+    opacity: 0.6;
+    cursor: pointer;
+  }
+  
+  .view-all-course {
+    border-bottom: 1px solid #ccc;
+    text-decoration: none;
+    color: #ccc;
+  }
+  
+  .wrapper {
+    margin: 0 2%;
+  }
+  .tutors small {
+    color: red;
+  }
+  
+  .tutors img {
+    width: 100%;
+    height: auto;
+  }
+  
+  .tutors hr {
+    background-color: red;
+    width: 2%;
+    margin: 0 auto;
+    padding: 0.123em;
+  }
+  
+  .tutors-img::before,
+  .artist-img::after {
+    content: "";
+    position: absolute;
+    height: 20px;
+    width: 20px;
+  }
+  
+  .tutors-img::after {
+    right: 0;
+    bottom: 0;
+    border-right: 3px double #ec5242;
+    border-bottom: 3px double #ec5242;
+  }
+  
+  .artist-profile {
+    font-style: italic;
+    position: relative;
+    font-size: 0.9rem;
+  }
+  
+  .clients-section-wrapper {
+    text-align: center;
+  }
+  
+  .clients-section-wrapper img {
+    width: 100px;
+  }
+  
+  .client-section {
+    display: flex;
+    justify-content: space-around;
+    
+    align-items: center;
+    padding-bottom: 2em;
+    flex-wrap: wrap;
+    /* margin-right: 5%; */
+  }
+  
+  .client-logo {
+    border: 2px solid;
+    width: 200px;
+    display: inline-block;
+    height: auto;
+    padding: 0;
+  }
+  
+  figure {
+    width: 10%;
+    display: inline-block;
+    color: #ec5242;
+  }
+  
+  .client-item .client-logo {
+    -webkit-filter: grayscale(1);
+    filter: grayscale(1);
+    -webkit-transition: -webkit-filter 0.2s linear;
+    transition: -webkit-filter 0.2s linear;
+    transition: filter 0.2s linear;
+    transition: filter 0.2s linear, -webkit-filter 0.2s linear;
+  }
+  
+  .client-item hr {
+    background-color: red;
+    width: 2%;
+    margin: 0 auto;
+    padding: 0.123em;
+  }
+  
+  .footer {
+    display: flex;
+    align-items: center;
+    padding: 2em 10em;
+    background-color: #f1f1f1;
+  }
+  
+  @media only screen and (min-width: 768px) {
+    .footer {
+      display: flex;
+      align-items: center;
+      padding: 2em 5%;
+      background-color: #f1f1f1;
+    }
+  }
+  
+  @media only screen and (max-width: 768px) {
+    .nav-wrapper {
+      padding: 0.5em 1em;
+    }
+  
+    .top-nav {
+      padding: 0 2%;
+    }
+  
+    .hero {
+      text-align: left;
+      padding: 8em 1em 10em 1em;
+      height: 90%;
+      font-weight: 900;
+    }
+  
+    .description {
+      width: 100%;
+      border: 4px solid #ccc;
+      opacity: 0.6;
+      font-weight: 400;
+      font-size: 0.8em;
+      z-index: 0;
+    }
+  
+    .featured-course {
+      background: url(/assets/images/bg.jpg) 0 0 no-repeat;
+      background-size: cover;
+      color: #ccc;
+      padding: 1em;
+      margin: 0 auto;
+      height: auto;
+    }
+  
+    .client-logo {
+      width: 100%;
+      display: inline-block;
+      height: auto;
+      padding: 1em;
+    }
+  
+    .client-section {
+      display: flex;
+      justify-content: space-around;
+      
+      align-items: center;
+      padding-bottom: 2em;
+      flex-wrap: wrap;
+      /* margin-right: 5%; */
+    }
+    
+    .footer {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 2em 1em;
+      background-color: #f1f1f1;
+    }
+    .client-logo {
+      display: flex;
+      width: 10em;
+      display: inline-block;
+      height: auto;
+      padding: 1em;
+    }
+  }
+  
