Fix the responsiveness as pointed out by Uduak

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,10 @@
 @font-face {
   font-family: "cocogoose";
   src: url("/assets/css/webfontkit/cocogoose_pro-trial-webfont.woff");
-  src:
-    url("/assets/css/webfontkit/cocogoose_pro_ultralight-trial-webfont.woff2")
-    format("woff"),
+  src: url("/assets/css/webfontkit/cocogoose_pro_ultralight-trial-webfont.woff2")
+      format("woff"),
     url("/assets/css/webfontkit/cocogoose_pro_italic-trial-webfont.woff2")
-    format("opentype");
+      format("opentype");
 }
 
 * {
@@ -98,8 +97,7 @@ img {
 }
 
 .hero {
-  background-image:
-    linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.7)),
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.7)),
     url(/assets/images/hero-img.jpg);
   background-size: cover;
   background-attachment: fixed !important;
@@ -108,9 +106,14 @@ img {
   font-weight: 900;
 }
 
-.hero h1,
-h3 {
-  color: #ec5242;
+.hero h1 {
+  color: white; /* Fallback: assume this color ON TOP of image */
+  background: url(/assets/images/hero-img.jpg) 0 0 no-repeat;
+  -webkit-background-clip: text;
+  background-attachment: fixed;
+  font-size: 5em;
+  font-weight: 900;
+  -webkit-text-fill-color: transparent;
 }
 
 /* Plan page */
@@ -157,8 +160,7 @@ h3 {
   margin: auto;
   min-width: 80%;
   border: 10px solid transparent;
-  border-image:
-    repeating-linear-gradient(
+  border-image: repeating-linear-gradient(
       -45deg,
       #ec5242 0,
       #ec5242 1em,
@@ -181,8 +183,7 @@ h3 {
 /* About page */
 
 .abt-hero {
-  background:
-    linear-gradient(rgba(0, 0, 0, 0.61), rgba(0, 0, 0, 0.63)),
+  background: linear-gradient(rgba(0, 0, 0, 0.61), rgba(0, 0, 0, 0.63)),
     url(/assets/images/abt-img.jpg) 0 0 no-repeat;
   background-size: cover;
   background-attachment: fixed !important;
@@ -198,16 +199,14 @@ h3 {
 }
 
 .project1 {
-  background:
-    linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
     url(/assets/images/project1.jpg) 0 0 no-repeat;
   background-size: cover;
   padding: 5em 0;
 }
 
 .project2 {
-  background:
-    linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
     url(/assets/images/nick-morrison-FHnnjk1Yj7Y-unsplash.jpg) 0 0 no-repeat;
   background-size: cover;
   padding: 5em 0;
@@ -371,37 +370,6 @@ h3 {
   width: 100% !important;
 }
 
-@media only screen and (min-width: 768px) and (max-width: 992px) {
-  .nav a {
-    padding: 0 0 0 0.1em;
-    color: dimgray;
-  }
-
-  .hero {
-    padding: 4em 0 2em 5%;
-    height: 60% !important;
-    font-weight: 900;
-  }
-
-  .featured-course {
-    padding: 1% 2.5% 0 1%;
-    height: auto;
-  }
-
-  .featured-course p {
-    width: 100% !important;
-    height: 260px !important;
-  }
-
-  .description {
-    width: 50% !important;
-    border: 4px solid #ccc;
-    font-weight: 400;
-    font-size: 0.8em;
-    z-index: 0;
-  }
-}
-
 @media only screen and (max-width: 768px) {
   .wrapper {
     margin: 0;
@@ -455,5 +423,35 @@ h3 {
     margin: 0 auto;
     padding: 1em;
     border-radius: 40px;
+  }
+
+@media only screen and (min-width: 768px) {
+  .nav a {
+    padding: 0 0 0 0.1em;
+    color: dimgray;
+  }
+
+  .hero {
+    padding: 4em 0 2em 5%;
+    height: 60% !important;
+    font-weight: 900;
+  }
+
+  .featured-course {
+    padding: 1% 2.5% 0 1%;
+    height: auto;
+  }
+
+  .featured-course p {
+    width: 100% !important;
+    height: 260px !important;
+  }
+
+  .description {
+    width: 50% !important;
+    border: 4px solid #ccc;
+    font-weight: 400;
+    font-size: 0.8em;
+    z-index: 0;
   }
 }
