--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -370,62 +370,61 @@ img {
   width: 100% !important;
 }
 
-@media only screen and (max-width: 768px) {
-  .wrapper {
-    margin: 0;
-  }
+.wrapper {
+  margin: 0;
+}
 
-  .featured-course .w {
-    width: 100% !important;
-  }
+.featured-course .w {
+  width: 100% !important;
+}
 
-  .featured-course {
-    padding: 1% 2.5% 0 1%;
-    height: auto;
-  }
+.featured-course {
+  padding: 1% 2.5% 0 1%;
+  height: auto;
+}
 
-  .featured-course p {
-    width: 100% !important;
-    height: auto;
-  }
+.featured-course p {
+  width: 100% !important;
+  height: auto;
+}
 
-  .hero {
-    padding: 1em 1% 2em 1%;
-    height: 50% !important;
-    font-weight: 900;
-  }
+.hero {
+  padding: 1em 1% 2em 1%;
+  height: 50% !important;
+  font-weight: 900;
+}
 
-  .description {
-    width: 100%;
-    border: 4px solid #ccc;
-    opacity: 0.6;
-    font-weight: 400;
-    font-size: 0.8em;
-    z-index: 0;
-  }
+.description {
+  width: 100%;
+  border: 4px solid #ccc;
+  opacity: 0.6;
+  font-weight: 400;
+  font-size: 0.8em;
+  z-index: 0;
+}
 
-  .abt-hero {
-    padding: 3em 0 0 0;
-  }
+.abt-hero {
+  padding: 3em 0 0 0;
+}
 
-  .abt-description {
-    width: 100%;
-  }
+.abt-description {
+  width: 100%;
+}
 
-  .client-section {
-    margin: 0 5%;
-    display: grid;
-    grid-template-columns: auto auto auto auto auto;
-  }
+.client-section {
+  margin: 0 5%;
+  display: grid;
+  grid-template-columns: auto auto auto auto auto;
+}
 
-  .step {
-    width: 100%;
-    margin: 0 auto;
-    padding: 1em;
-    border-radius: 40px;
-  }
+.step {
+  width: 100%;
+  margin: 0 auto;
+  padding: 1em;
+  border-radius: 40px;
+}
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width: 992px) {
   .nav a {
     padding: 0 0 0 0.1em;
     color: dimgray;
