Ajdust the flow of the stylesheet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,11 @@
 @font-face {
   font-family: "cocogoose";
   src: url("/assets/css/webfontkit/cocogoose_pro-trial-webfont.woff");
-  src: url("/assets/css/webfontkit/cocogoose_pro_ultralight-trial-webfont.woff2")
-      format("woff"),
+  src:
+    url("/assets/css/webfontkit/cocogoose_pro_ultralight-trial-webfont.woff2")
+    format("woff"),
     url("/assets/css/webfontkit/cocogoose_pro_italic-trial-webfont.woff2")
-      format("opentype");
+    format("opentype");
 }
 
 * {
@@ -97,7 +98,8 @@ img {
 }
 
 .hero {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.7)),
+  background-image:
+    linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.7)),
     url(/assets/images/hero-img.jpg);
   background-size: cover;
   background-attachment: fixed !important;
@@ -170,7 +172,8 @@ img {
   margin: auto;
   min-width: 80%;
   border: 10px solid transparent;
-  border-image: repeating-linear-gradient(
+  border-image:
+    repeating-linear-gradient(
       -45deg,
       #ec5242 0,
       #ec5242 1em,
@@ -181,7 +184,7 @@ img {
       transparent 3em,
       transparent 4em
     )
-    20 repeat;
+    80 repeat;
 }
 
 .step {
@@ -193,7 +196,8 @@ img {
 /* About page */
 
 .abt-hero {
-  background: linear-gradient(rgba(0, 0, 0, 0.61), rgba(0, 0, 0, 0.63)),
+  background:
+    linear-gradient(rgba(0, 0, 0, 0.61), rgba(0, 0, 0, 0.63)),
     url(/assets/images/abt-img.jpg) 0 0 no-repeat;
   background-size: cover;
   background-attachment: fixed !important;
@@ -209,14 +213,16 @@ img {
 }
 
 .project1 {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+  background:
+    linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
     url(/assets/images/project1.jpg) 0 0 no-repeat;
   background-size: cover;
   padding: 5em 0;
 }
 
 .project2 {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+  background:
+    linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
     url(/assets/images/nick-morrison-FHnnjk1Yj7Y-unsplash.jpg) 0 0 no-repeat;
   background-size: cover;
   padding: 5em 0;
@@ -284,6 +290,11 @@ img {
   margin: 0.2em 0;
 }
 
+.client-item .cols {
+  margin: 1em;
+  width: 30%;
+}
+
 .featured-course .cols:hover {
   box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.3);
   opacity: 0.6;
@@ -342,12 +353,10 @@ img {
   padding: 0;
 }
 
-
-
 .client-section h4 {
   text-align: center;
   width: 100%;
-  padding: 1em ;
+  padding: 1em;
   color: #f1f1f1;
 }
 
@@ -356,11 +365,6 @@ img {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-}
-
-.client-item .cols {
-  margin: 1em;
-  width: 30%;
 }
 
 .client-item h4 {
@@ -386,15 +390,6 @@ img {
 .featured-course .w {
   width: 80px;
   padding: 0 0 0 1em;
-}
-
-.wrapper {
-  margin: 0;
-}
-
-.featured-course {
-  padding: 1% 2.5% 0 1%;
-  height: auto;
 }
 
 @media only screen and (min-width: 768px) {
@@ -442,7 +437,7 @@ img {
   .client-section h4 {
     text-align: center;
     width: 100%;
-    padding: 1em ;
+    padding: 1em;
     color: #f1f1f1;
   }
 
