--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,7 +209,7 @@ img {
   background-position: center;
   color: #fff;
   text-align: center;
-  padding: 4em 0 1em 0;
+  padding: 4em 1em 1em 1em;
   height: 50%;
 }
 
@@ -256,7 +256,7 @@ img {
 }
 
 .abt-description {
-  width: 50%;
+  width: 100%;
   border: 4px solid #f1f1f1;
   background-color: rgba(0, 0, 0, 0.5) !important;
   color: #fff;
@@ -459,6 +459,10 @@ img {
     width: 40%;
     margin: 0 auto;
     border-radius: 40px;
+  }
+
+  .abt-description {
+    width: 50%;
   }
   
 }
